* 1.0.0
    - Soap web service
    - Rest web service
    - Swagger UI
    - Insert triples metadata on mongodb

* 1.1.0
    - Add context
    - Add v1 Service: search
    - Add v1 Service: get triple
    - Add v1 Service: export triple