@@ -1,19 +1,24 @@
 package ir.ac.iust.dml.kg.knowledge.store.access.entities;
 
+import java.util.*;
+
 /**
  * data class for encapsulate
  */
 public class Source {
     private String module;
-    private String url;
+    private Set<String> urls;
+    private Map<String, String> parameters;
     private Double precession;
 
     public Source() {
     }
 
-    public Source(String module, String url, Double precession) {
+    public Source(String module, List<String> urls, Map<String, String> parameters, Double precession) {
         this.module = module;
-        this.url = url;
+        this.urls = new HashSet<>();
+        this.urls.addAll(urls);
+        this.parameters = parameters;
         this.precession = precession;
     }
 
@@ -25,12 +30,22 @@ public class Source {
         this.module = module;
     }
 
-    public String getUrl() {
-        return url;
+    public Set<String> getUrls() {
+        return urls;
     }
 
-    public void setUrl(String url) {
-        this.url = url;
+    public void setUrls(Set<String> urls) {
+        this.urls = urls;
+    }
+
+    public Map<String, String> getParameters() {
+        if (parameters == null)
+            parameters = new HashMap<>();
+        return parameters;
+    }
+
+    public void setParameters(Map<String, String> parameters) {
+        this.parameters = parameters;
     }
 
     public Double getPrecession() {
@@ -48,19 +63,19 @@ public class Source {
 
         Source source = (Source) o;
 
-        if (module != null ? !module.equals(source.module) : source.module != null) return false;
-        return url != null ? url.equals(source.url) : source.url == null;
+        return module != null ? module.equals(source.module) : source.module == null;
     }
 
     @Override
     public int hashCode() {
-        int result = module != null ? module.hashCode() : 0;
-        result = 31 * result + (url != null ? url.hashCode() : 0);
-        return result;
+        return module != null ? module.hashCode() : 0;
     }
 
     @Override
     public String toString() {
-        return String.format("from %s by %s", url, module);
+        final StringBuilder urlBuilder = new StringBuilder("[");
+        urls.forEach(u -> urlBuilder.append(u).append(" "));
+        urlBuilder.append("]");
+        return String.format("Source{ %s@%s}", urlBuilder, module);
     }
 }
