@@ -194,6 +194,11 @@
             <!-- use 3.0-b01 version for Java 6 -->
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>cz.jirutka.validator</groupId>
+            <artifactId>validator-collection</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
         <!-- LOG4J -->
         <dependency>
